<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@drawable/background_image_fraser">

    <TextView
        android:id="@+id/textFound1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/found_text"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFoundMines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/num_mines_found_text"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textFound1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFound2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/of_text"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textFoundMines"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFoundOverallMines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/num_mines_board_text"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textFound2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFound3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mines_text"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textFoundOverallMines"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNumScans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/num_scans_used"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textScans1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/of_scans_used_text"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/textNumScans"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>