<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@drawable/background_image_fraser">

    <TextView
        android:id="@+id/textMenu"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/headers_fancy"
        android:gravity="center"
        android:text="@string/main_menu_text"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="247dp"
        android:layout_height="241dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMenu"
        app:srcCompat="@drawable/mine_menu"
        android:contentDescription="@string/mine_image_menu_description" />

    <Button
        android:id="@+id/buttonPlayGame"
        android:layout_width="236dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttons_fancy"
        android:text="@string/play_game_button_text"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMenu" />

    <Button
        android:id="@+id/buttonOptions"
        android:layout_width="236dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/options_button_text"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:background="@drawable/buttons_fancy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlayGame" />

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="236dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/help_button_text"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:background="@drawable/buttons_fancy"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOptions" />
</androidx.constraintlayout.widget.ConstraintLayout>