<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity"
    android:background="@drawable/background_image_fraser">

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="150dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/settings_text"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/headers_fancy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textBoardSize"
        android:layout_width="110dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/board_size_text"
        android:textColor="#FFFFFF"
        android:background="@drawable/headers_fancy"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSettings" />

    <RadioGroup
        android:id="@+id/radioGroupBoardSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBoardSize" />

    <TextView
        android:id="@+id/textNumMines"
        android:layout_width="150dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/number_of_mines_text"
        android:textColor="#FFFFFF"
        android:background="@drawable/headers_fancy"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textBoardSize"
        app:layout_constraintTop_toBottomOf="@+id/textSettings" />

    <RadioGroup
        android:id="@+id/radioGroupNumMines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textBoardSize"
        app:layout_constraintTop_toBottomOf="@+id/textNumMines" />
</androidx.constraintlayout.widget.ConstraintLayout>